# vecter

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  mouse-follow.c  platformer.c
include/: vecter.h
src/: vecter.c
test/: CMakeLists.txt  collision-order.c  common.h  sharp-angle.c  trivial-move.c  trivial-wall.c  wall-push.c
